--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "ct": "npx hardhat compile && npx hardhat test"
+    "ct": "npx hardhat compile && npx hardhat test",
+    "cdl": "npx hardhatcompile && npx hardhat run scripts/deploy.js --network localhost",
+    "cdtn": "npx hardhatcompile && npx hardhat run scripts/deploy.js --network mumbai",
+    "cdtm": "npx hardhatcompile && npx hardhat run scripts/deploy.js --network mainnet"
   },
   "dependencies": {
     "@pinata/sdk": "^1.1.23",
     "dotenv": "^16.0.0",
+    "jotai": "^1.6.0",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
